# gimme-job-tool

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: models.py
backend/app/routers/: jobs.py  pipeline.py  profile.py  qa.py
backend/app/schemas/: schemas.py
backend/app/services/: ai_analyzer.py  ats_lookup.py  auto_apply.py  form_scanner.py  job_fetcher.py  pipeline.py  resume_tailor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  ErrorBoundary.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/pages/: ApplicationsPage.jsx  CompaniesPage.jsx  JobsPage.jsx  PipelinePage.jsx  ProfilePage.jsx  QuestionsPage.jsx
