[project]
name = "gimme-job-tool"
version = "0.1.0"
description = "Automated job application agent using AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "playwright>=1.49.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
